Fixed the issue with my head

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(AFIT-CSCE689-HW1-S)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Client src/client_main.cpp src/Client.h src/Client.cpp src/TCPClient.cpp src/TCPClient.h)
-add_executable(Server src/server_main.cpp src/Server.h src/Server.cpp src/TCPServer.cpp src/TCPServer.h)
+add_executable(Client src/client_main.cpp src/Client.cpp include/Client.h src/TCPClient.cpp include/TCPServer.h include/config.h include/exceptions.h include/strfuncts.h)
+add_executable(Server src/server_main.cpp src/Server.cpp src/TCPServer.cpp include/config.h include/exceptions.h include/strfuncts.h)
 
-target_include_directories(Client PRIVATE src)
-target_include_directories(Server PRIVATE src)
+target_include_directories(Client PRIVATE src include)
+target_include_directories(Server PRIVATE src include)
