--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,10 @@
 bin_PROGRAMS = tcpserver tcpclient
 
 
-tcpserver_SOURCES = server_main.cpp Server.cpp TCPServer.cpp strfuncts.cpp TCP.cpp
+tcpserver_SOURCES = server_main.cpp Server.cpp TCPServer.cpp strfuncts.cpp Selector.cpp
 # tcpserver_LDFLAGS = -largon2
 
-tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp TCP.cpp
+tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp Selector.cpp
 
 # For homework 2
 # my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
